code quiz updates

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,12 @@ button:hover {
     left: 15px;
 }
 
+.score {
+    position:absolute;
+    top: 15px;
+    left: 50%;
+}
+
 .hidden{
     display:none;
 }
